<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="teste_de_software.com.br.calculadora.MainActivity">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="501dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="16dp">

            <EditText
                android:id="@+id/display"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textAlignment="textEnd"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="125dp"
                tools:layout_editor_absoluteY="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="6dp"
            tools:layout_editor_absoluteY="103dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="228dp">

                <Button
                    android:id="@+id/numero7"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.93"
                    android:text="7"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="8dp" />

                <Button
                    android:id="@+id/numero8"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.93"
                    android:text="8" />

                <Button
                    android:id="@+id/numero9"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1.02"
                    android:text="9" />

                <Button
                    android:id="@+id/operador_dividir"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1.03"
                    android:text="/" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="432dp">

                <Button
                    android:id="@+id/numero4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="4" />

                <Button
                    android:id="@+id/numero5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="5" />

                <Button
                    android:id="@+id/numero6"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="6" />

                <Button
                    android:id="@+id/operador_multiplicar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="x" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="296dp">

                <Button
                    android:id="@+id/numero1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="1"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="8dp" />

                <Button
                    android:id="@+id/numero2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="2" />

                <Button
                    android:id="@+id/numero3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="3" />

                <Button
                    android:id="@+id/operador_somar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="+" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="364dp">

                <Button
                    android:id="@+id/numero0"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="0" />

                <Button
                    android:id="@+id/operador_limpar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="C" />

                <Button
                    android:id="@+id/operador_resultado"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="=" />

                <Button
                    android:id="@+id/operador_subtrair"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="-" />
            </LinearLayout>
        </LinearLayout>

        <!--<EditText-->
            <!--android:id="@+id/teste"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:ems="10"-->
            <!--android:inputType="textPersonName"-->
            <!--android:text="Operador = " />-->

        <!--<EditText-->
            <!--android:id="@+id/ETNegativo"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:ems="10"-->
            <!--android:inputType="textPersonName"-->
            <!--android:text="Name" />-->

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
